[gd_scene load_steps=5 format=3 uid="uid://bfaml6fvju46q"]

[ext_resource type="Script" path="res://Scenes/boat_detection.gd" id="1_o888r"]
[ext_resource type="Texture2D" uid="uid://cmsts1ssqh3cs" path="res://Assets/Art/Temp/placeholder.png" id="2_lbba3"]
[ext_resource type="Texture2D" uid="uid://cc1xaaeiuebob" path="res://Assets/Art/Background/swamp_bg.png" id="3_tydf5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_3m35c"]
radius = 1.63786
height = 6.71683

[node name="BoatDetectionArea" type="Area2D"]
script = ExtResource("1_o888r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(155, 1103)
rotation = 1.80991
scale = Vector2(100, 100)
shape = SubResource("CapsuleShape2D_3m35c")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-4.76837e-07, -4.76837e-07)
scale = Vector2(2, 2)
texture = ExtResource("2_lbba3")

[node name="SwampBg" type="Sprite2D" parent="."]
visible = false
z_index = -2
position = Vector2(971, 545)
scale = Vector2(0.335, 0.335)
texture = ExtResource("3_tydf5")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
